# json_fix

./: .gitignore  README.md  pyproject.toml
commands/: test  update_dependencies
commands/project/: local_install  publish
documentation/: setup.md
main/: license.txt  setup.py
main/json_fix/: __init__.py
main/your_package_name/: __init__.py  main.py  settings.json
main/your_package_name/__dependencies__/: __init__.py
settings/extensions/nix/: shell.nix
settings/extensions/python/commands/: ensure_pip_modules
tests/: 1.py  2.py  3.json  3.py  4.py  5.py  6.py  test1.json  test4_3.json  test5.json  test6.json
