[tool.poetry]
name = "your_package_name"
version = "0.0.1"
description = "YOUR_DESCRIPTION"
authors=[]

[tool.extra]
author='YOUR_NAME_14057'
author_email='YOUR_EMAIL'
url='YOUR_GIT_REPO_URL'
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.12"
pip = "20.1.1"

[tool.poetry.dev-dependencies]
twine = "3.4.1"
"keyrings.alt" = "4.0.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
